# CogAlpha

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
cogalpha/: alpha_contract.py  artifacts.py  backtest.py  combination.py  concurrency.py  data.py  evaluation.py  execution.py  execution_pool.py  fitness.py  instrumentation.py  orchestrator.py  protocol.py  redaction.py  schemas.py  secrets.py  state.py  tracing.py
cogalpha/benchmark/: __init__.py  presets.py  specs.py
cogalpha/data_sources/: __init__.py  diagnostic_smoke.py  qlib_direct.py  strategy.py
cogalpha/guards/: __init__.py  alpha_code.py  alpha_runtime.py  pipeline.py
cogalpha/io/: __init__.py  run.py
cogalpha/llm/: __init__.py  client.py
cogalpha/skill_runtime/: __init__.py  invocation.py  io.py  loader.py  nodes.py  registry.py  verdict.py
cogalpha/stages/: __init__.py  adaptive.py  defaults.py  evolution.py  fitness.py  generation.py  injection.py  leakage.py  quality.py
cogalpha/verification/: trace_verifier.py
docs/: paper-summary.md  quantaalpha-comparison.md  system-walkthrough.md
scripts/: prepare_direct_qlib_csi300.py  prepare_hf_qlib_csi300.py  prepare_mini_csi300.py  run.py
skills/_base/: SKILL.md
skills/alpha-bar-shape/: SKILL.md
skills/alpha-code-quality/: SKILL.md
skills/alpha-code-repair/: SKILL.md
skills/alpha-composite/: SKILL.md
skills/alpha-crash-predictor/: SKILL.md
skills/alpha-creative/: SKILL.md
skills/alpha-crossover/: SKILL.md
skills/alpha-daily-trend/: SKILL.md
skills/alpha-drawdown/: SKILL.md
skills/alpha-fractal/: SKILL.md
(+19 files in other folders)
